syntax = "proto3";

package article;

service ArticleService {
  rpc AddArticle(AddArticleRequest) returns (AddArticleResponse) {}
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse) {}
  rpc GetArticleList(GetArticleListRequest) returns (GetArticleListResponse) {}
  rpc DelArticle(DelArticleRequest) returns (DelArticleResponse) {}
  rpc ModifyArticleInfo(ModifyArticleInfoRequest) returns (ModifyArticleInfoResponse) {}
}

message ArticleInfo {
  string articleID = 1;
  string title = 2;
  string content = 3;
  repeated string tags = 4;
}

message AddArticleRequest {
  ArticleInfo articleInfo = 1;
  string userID = 2;
}

message AddArticleResponse {
  uint32 code = 1;
  string codeMsg = 2;
  string articleID = 3;
}

message GetArticleRequest {
  string articleID = 1;
}

message GetArticleResponse {
  uint32 code = 1;
  string codeMsg = 2;
  ArticleInfo articleInfo = 3;
}

message GetArticleListRequest {
  int64 page = 1;
  int64 numPerPage = 2;
  int64 lastArticleID = 3;
}

message GetArticleListResponse {
  uint32 code = 1;
  string codeMsg = 2;
  repeated ArticleInfo articleInfos = 3;
}

message DelArticleRequest {
  string articleID = 1;
}

message DelArticleResponse {
  uint32 code = 1;
  string codeMsg = 2;
}

message ModifyArticleInfoRequest {
  ArticleInfo articleInfo = 1;
}

message ModifyArticleInfoResponse {
  uint32 code = 1;
  string codeMsg = 2;
}